# sonic-otairedis

./: .gitignore  .gitmodules  Makefile.am  README.md  configure.ac  extension.py
lib/: Channel.h  Context.cpp  Context.h  ContextConfig.h  ContextConfigContainer.cpp  Linecard.cpp  Linecard.h  LinecardContainer.cpp  Makefile.am  Otai.cpp  Otai.h  Recorder.cpp  Recorder.h  RedisChannel.h  RedisRemoteOtaiInterface.cpp  RedisRemoteOtaiInterface.h  RedisVidIndexGenerator.h  RemoteOtaiInterface.h  SkipRecordAttrContainer.cpp  SkipRecordAttrContainer.h  Utils.h  VirtualObjectIdManager.cpp  VirtualObjectIdManager.h  otai_redis.h  otai_redis_aps.cpp  otai_redis_assignment.cpp  otai_redis_attenuator.cpp  otai_redis_ethernet.cpp  otai_redis_interface.cpp  otai_redis_interfacequery.cpp  otai_redis_linecard.cpp  otai_redis_lldp.cpp  otai_redis_oa.cpp  otai_redis_och.cpp  otai_redis_otdr.cpp  otai_redis_port.cpp  otai_redis_transceiver.cpp  otairedis.h  otairediscommon.h
lib/inc/: Channel.h  Context.h  ContextConfig.h  ContextConfigContainer.h  Lai.h  LaiInterface.h  Linecard.h  LinecardConfig.h  LinecardConfigContainer.h  LinecardContainer.h  Notification.h  NotificationFactory.h  NotificationLinecardAlarm.h  NotificationLinecardStateChange.h  NotificationOcmNotify.h  OidIndexGenerator.h  Otai.h  OtaiInterface.h  PerformanceIntervalTimer.h  Recorder.h  RedisChannel.h  RedisRemoteLaiInterface.h  RedisRemoteOtaiInterface.h  RedisVidIndexGenerator.h  RemoteLaiInterface.h  RemoteOtaiInterface.h  SkipRecordAttrContainer.h  Utils.h  VirtualObjectIdManager.h  lai_redis.h  lairedis.h  lairediscommon.h  otairediscommon.h
lib/src/: Channel.cpp  Context.cpp  ContextConfig.cpp  ContextConfigContainer.cpp  Lai.cpp  LaiInterface.cpp  Linecard.cpp  LinecardConfig.cpp  LinecardConfigContainer.cpp  LinecardContainer.cpp  Makefile.am  Notification.cpp  NotificationFactory.cpp  NotificationLinecardAlarm.cpp  NotificationLinecardStateChange.cpp  NotificationOcmNotify.cpp  Otai.cpp  OtaiInterface.cpp  PerformanceIntervalTimer.cpp  Recorder.cpp  RedisChannel.cpp  RedisRemoteLaiInterface.cpp  RedisRemoteOtaiInterface.cpp  RedisVidIndexGenerator.cpp  SkipRecordAttrContainer.cpp  Utils.cpp  VirtualObjectIdManager.cpp  context_config.json  lai_redis_aps.cpp  lai_redis_apsport.cpp  lai_redis_assignment.cpp  lai_redis_attenuator.cpp  lai_redis_ethernet.cpp  lai_redis_interface.cpp  lai_redis_interfacequery.cpp  lai_redis_linecard.cpp  lai_redis_lldp.cpp  lai_redis_logicalchannel.cpp  lai_redis_mediachannel.cpp  lai_redis_oa.cpp  (+18 more)
meta/: AttrKeyMap.cpp  AttrKeyMap.h  DummyLaiInterface.cpp  DummyLaiInterface.h  DummyOtaiInterface.cpp  DummyOtaiInterface.h  Globals.cpp  Globals.h  LaiAttrWrapper.cpp  LaiAttrWrapper.h  LaiAttributeList.cpp  LaiAttributeList.h  LaiObject.cpp  LaiObject.h  LaiObjectCollection.cpp  LaiObjectCollection.h  Makefile.am  Meta.cpp  Meta.h  MetaKeyHasher.cpp  MetaKeyHasher.h  MetaTestLaiInterface.cpp  MetaTestLaiInterface.h  MetaTestOtaiInterface.cpp  MetaTestOtaiInterface.h  Notification.cpp  Notification.h  NotificationFactory.h  NotificationOcmNotify.h  NumberOidIndexGenerator.cpp  NumberOidIndexGenerator.h  OidRefCounter.cpp  OidRefCounter.h  OtaiAttrWrapper.cpp  OtaiAttrWrapper.h  OtaiAttributeList.cpp  OtaiAttributeList.h  OtaiInterface.cpp  OtaiInterface.h  OtaiObject.cpp  (+11 more)
syncd/: AsicOperation.cpp  AsicOperation.h  CommandLineOptions.cpp  CommandLineOptions.h  CommandLineOptionsParser.cpp  Common.h  FlexCounter.cpp  FlexCounter.h  FlexCounterManager.cpp  FlexCounterManager.h  FlexCounterReiniter.cpp  FlexCounterReiniter.h  GlobalLinecardId.cpp  GlobalLinecardId.h  HardReiniter.cpp  HardReiniter.h  LaiAttr.cpp  LaiAttr.h  LaiDiscovery.cpp  LaiDiscovery.h  LaiLinecard.cpp  LaiLinecard.h  LaiLinecardInterface.cpp  LaiLinecardInterface.h  LaiObj.cpp  LaiObj.h  LinecardNotifications.cpp  LinecardNotifications.h  Makefile.am  MetadataLogger.cpp  NotificationHandler.cpp  NotificationHandler.h  NotificationProcessor.cpp  NotificationProcessor.h  NotificationQueue.cpp  NotificationQueue.h  OtaiAttr.cpp  OtaiAttr.h  OtaiDiscovery.cpp  OtaiDiscovery.h  (+40 more)
syncd/.deps/: libSyncd_a-NotificationProcessor.Tpo
syncd/pm/: Collector.cpp  Collector.h  LaiAttrCollector.cpp  LaiAttrCollector.h  LaiGaugeCollector.cpp  LaiGaugeCollector.h  LaiStatCollector.cpp  LaiStatCollector.h  OtaiAttrCollector.cpp  OtaiAttrCollector.h  OtaiGaugeCollector.cpp  OtaiGaugeCollector.h  OtaiStatCollector.cpp  OtaiStatCollector.h
syncd/scripts/: syncd_init_common.sh  syncd_start.sh
vslib/: Event.h  EventPayload.h  EventPayloadNotification.h  Linecard.cpp  Linecard.h  LinecardConfig.cpp  LinecardConfig.h  LinecardOTN.cpp  LinecardOTN.h  LinecardState.cpp  LinecardState.h  LinecardStateBase.cpp  LinecardStateBase.h  Makefile.am  Otai.cpp  Otai.h  OtaiAttrWrap.cpp  OtaiCheckLink.cpp  OtaiEventQueue.cpp  OtaiObjectNotificationSim.cpp  OtaiObjectNotificationSim.h  OtaiObjectSimulator.cpp  OtaiObjectSimulator.h  RealObjectIdManager.cpp  RealObjectIdManager.h  SelectableFd.h  VirtualLinecardOtaiInterface.cpp  VirtualLinecardOtaiInterface.h  otai_vs_apsport.cpp  otai_vs_interfacequery.cpp  otai_vs_lldp.cpp  otai_vs_logicalchannel.cpp  otai_vs_osc.cpp  otai_vs_otdr.cpp  otai_vs_otn.cpp  otai_vs_transceiver.cpp  otai_vs_wss.cpp  otaivs.h
vslib/inc/: Buffer.h  CorePortIndexMap.h  CorePortIndexMapContainer.h  CorePortIndexMapFileParser.h  Event.h  EventPayload.h  EventPayloadNetLinkMsg.h  EventPayloadNotification.h  EventPayloadPacket.h  EventQueue.h  HostInterfaceInfo.h  Lai.h  LaiAttrWrap.h  LaneMap.h  LaneMapContainer.h  LaneMapFileParser.h  Linecard.h  LinecardConfig.h  LinecardConfigContainer.h  LinecardContainer.h  LinecardP230C.h  LinecardState.h  LinecardStateBase.h  NetMsgRegistrar.h  OAEmulator.h  Otai.h  OtaiAttrWrap.h  RealObjectIdManager.h  ResourceLimiter.h  ResourceLimiterContainer.h  ResourceLimiterParser.h  SelectableFd.h  Signal.h  VirtualLinecardLaiInterface.h  VirtualLinecardOtaiInterface.h  console.h  editline.h  lai_vs.h  laivs.h  otai_vs.h  (+3 more)
vslib/otai_sim_data/: otai_aps_sim.json  otai_apsport_sim.json  (+19 more)
(+103 files in other folders)
